--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>jornal-compass-nexus</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>North Star Network - Gestão de Jornais</title>
+    <meta name="description" content="Sistema de Gestão North Star Network" />
+    <link rel="icon" type="image/png" href="/betting.png" />
 
-    <meta property="og:title" content="jornal-compass-nexus" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="North Star Network - Gestão de Jornais" />
+    <meta property="og:description" content="Sistema de Gestão North Star Network" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/betting.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/betting.png" />
   </head>
 
   <body>
